Change device chooser paired text to be white when selected (Mac)

On Mac, currently when an entry is selected in the device chooser, the
paired text is shown as light green. This CL changes its color to be
white to increase the contrast.

I uploaded a screenshot on the issue page.

Bug: 711563
Change-Id: I4842bfe5e1ea04fcc0a868b8d6f16b8552bd2d20
Reviewed-on: https://chromium-review.googlesource.com/688753
Reviewed-by: Robert Sesek <rsesek@chromium.org>
Commit-Queue: Jun Cai <juncai@chromium.org>
Cr-Commit-Position: refs/heads/master@{#505066}
Former-commit-id: 2b90a4a3412b716d513adfa2b6594ba8d85a707d